# Switchy

./: CMakeLists.txt  Messages.sh  README  Switchy.kdev4  appearance.ui  ksmserver.xml  plasma-applet-switchy.desktop  startup.ui  switchy.cpp  switchy.h  vgaswitcheroo.ui  videoinfo.cpp  videoinfo.h
client/: CMakeLists.txt  main.cpp  main.cpp~  quirks.h  quirks.h~  vgaclient.cpp~  vgaclient.h~
daemon/: CMakeLists.txt  main.cpp  vgad.xml  vgadbus.cpp  vgadbus.h  vgaswitch.conf  vgaswitcher.cpp  vgaswitcher.h
